# movies_uv

./: README.md  app.py  models.py  pyproject.toml  requirements.txt  schemas.py  views.py
